--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 * TermPresenter
 
 **abstract
--This is "presentation software" that works on terminal emulator. ssh, telnet, onX, ttyS.. and more!
+-This software is "presentation software" that works on terminal. ssh, telnet, onX, ttyS.. and more!
 
 **depend
 -libpango1-ruby1.8
