--- a/README
+++ b/README
@@ -2,6 +2,7 @@
 
 **abstract
 -This software is "presentation software" that works on terminal. ssh, telnet, onX, ttyS.. and more!
+-Ruby language for the first time.
 
 **depend
 -libpango1-ruby1.8
